--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   postgres:
     image: postgres:15
-    container_name: template_todo_app_postgres
+    container_name: study_storybook_postgres
     restart: unless-stopped
     environment:
-      POSTGRES_DB: template_todo_app_db
-      POSTGRES_USER: todo_user
-      POSTGRES_PASSWORD: todo_password
+      POSTGRES_DB: study_storybook_db
+      POSTGRES_USER: storybook_user
+      POSTGRES_PASSWORD: storybook_password
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=C"
     ports:
       - "5432:5432"
@@ -17,10 +17,10 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4:latest
-    container_name: template_todo_app_pgadmin
+    container_name: study_storybook_pgadmin
     restart: unless-stopped
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@template-todo-app.com
+      PGADMIN_DEFAULT_EMAIL: admin@study-storybook.com
       PGADMIN_DEFAULT_PASSWORD: admin123
       PGADMIN_CONFIG_SERVER_MODE: "False"
     ports:
