--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@storybook/addon-actions": "^9.0.8",
+    "@storybook/react": "^9.1.13",
+    "@storybook/test": "^8.6.14",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -22,20 +25,20 @@
     "@storybook/addon-docs": "^9.1.13",
     "@storybook/addon-onboarding": "^9.1.13",
     "@storybook/addon-vitest": "^9.1.13",
+    "@storybook/nextjs-vite": "^9.1.13",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "eslint-plugin-storybook": "^9.1.13",
+    "playwright": "^1.56.1",
     "storybook": "^9.1.13",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "@storybook/nextjs-vite": "^9.1.13",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.56.1",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   }
 }
