--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "serve-storybook": "npx serve storybook-static -p 3000",
+    "preview-storybook": "npx serve storybook-static"
   },
   "dependencies": {
     "@storybook/addon-actions": "^9.0.8",
